--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ nav {
 .payment {
   width: 500px;
   height: 500px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(49 43 43 / 50%);
   backdrop-filter: blur(5px);
   position: absolute;
   /*  How to position an absolute item to center? Look below */
@@ -296,16 +296,19 @@ nav {
 
 label {
   font-size: 0.875rem;
-  font-weight: 300;
+  /* font-weight: 300; */
+  color: #cfcfd5;
+  font-size: medium;
+  font-weight: bolder;
 }
 
 .payInput {
   padding: 10px;
   margin: 10px 0;
-  border: none;
-  border-bottom: 1px solid gray;
+  border: #7b7b7a;
+  border-bottom: 1px solid #808080;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0px 0px 13px 2px rgb(0 0 0 / 30%);
 }
 
 .payInput::placeholder {
@@ -336,6 +339,7 @@ label {
   -webkit-box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
   background-color: rgba(0, 205, 0, 0.95);
   color: white;
+  font-weight: bolder;
   cursor: pointer;
 }
 
@@ -830,4 +834,7 @@ footer {
               font-size: 1rem;
           }
       }
+
+      
     }
+
